--- a/src/App.css
+++ b/src/App.css
@@ -49,3 +49,30 @@
   white-space: nowrap;
   width: 1px;
 }
+
+#bubbleOne, #bubbleA {
+  width: 30px;
+  height: auto;
+  border: 1px solid black;
+  background-color: lightpink;
+  color: black;
+  display: inline-block;
+  cursor: pointer;
+}
+
+#bubbleOne:hover, #bubbleA:hover {
+  background-color: pink;
+}
+
+#bubbleOne:active, #bubbleA:active {
+  background-color: red;
+}
+
+.dataRow {
+  display: flex;
+  justify-content: center;
+}
+
+.wordCol, .translateCol {
+  margin: 0 15px;
+}
